src/test/deca/syntax/invalid/personal/not_finished_include.deca
// Description:
//    Programme qui inclue un fichier sans finir la fin  
//
// Resultats:
//    erreur 
//
// Historique:
//    cree le 04/01/2025

#include "patate